--- a/config
+++ b/config
@@ -1,4 +1,4 @@
-Host bitbucket.rxpdev.com
+Match Host bitbucket.rxpdev.com
     User miguel.alpanez
 	IdentitiesOnly yes
 	IdentityFile ~/.ssh/miguelalpanez_ed25519
@@ -6,10 +6,12 @@ Host bitbucket.rxpdev.com
 	BatchMode yes
 	LogLevel INFO
 
-Host github.com
+Match Host github.com
     User malpanez
 	IdentitiesOnly yes
 	IdentityFile ~/.ssh/miguelalpanez_ed25519
 	StrictHostKeyChecking yes
 	BatchMode yes
 	LogLevel INFO
+
+Host *
